// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utbetalinger with kontonummer renders correctly 1`] = `
<DocumentFragment>
  <div
    class="box__wrapper"
    id="utbetaling"
  >
    <div
      class="navds-guide-panel navds-guide-panel--poster"
    >
      <div
        class="navds-guide"
      >
        <img
          alt=""
          class="box__ikon"
          src="Kontonummer.svg"
        />
      </div>
      <div
        class="navds-guide-panel__content"
      >
        <div
          class="box__container"
        >
          <div
            class="box__header"
          >
            <div
              class="box__title-container"
            >
              <div
                class="box__line"
              />
              <h2
                class="box__title navds-heading navds-heading--medium"
              >
                Kontonummer for utbetaling
              </h2>
              <div
                class="box__line"
              />
            </div>
            <a
              class="navds-link anchor-link navds-link--action"
              href="#utbetaling"
            >
              <svg
                aria-hidden="true"
                class="anchor-link__icon"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M14.909 5.152a2.25 2.25 0 0 1 3.182 0l.757.757a2.25 2.25 0 0 1 0 3.182l-4.964 4.965a1.25 1.25 0 0 1-1.768 0L11.03 12.97a.75.75 0 1 0-1.06 1.06l1.085 1.086a2.75 2.75 0 0 0 3.89 0l4.964-4.964a3.75 3.75 0 0 0 0-5.304l-.757-.757-.53.53.53-.53a3.75 3.75 0 0 0-5.304 0l-.878.879a.75.75 0 0 0 1.06 1.06l.879-.878Zm-1.964 3.732a2.75 2.75 0 0 0-3.89 0l-4.964 4.964a3.75 3.75 0 0 0 0 5.304l.513-.514-.513.514.757.757a3.75 3.75 0 0 0 5.304 0l.878-.879a.75.75 0 0 0-1.06-1.06l-.879.878a2.25 2.25 0 0 1-3.182 0l-.757-.757a2.25 2.25 0 0 1 0-3.182l4.964-4.965a1.25 1.25 0 0 1 1.768 0l1.086 1.086a.75.75 0 0 0 1.06-1.06l-1.085-1.086Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              Lenke hit
            </a>
          </div>
          <div
            style="padding-bottom: 1rem;"
          >
            <div
              class="navds-alert navds-alert--warning navds-alert--medium"
              role="status"
            >
              <svg
                aria-labelledby="title-r1"
                class="navds-alert__icon"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="title-r1"
                >
                  Advarsel
                </title>
                <path
                  clip-rule="evenodd"
                  d="M12 2.25a.75.75 0 0 1 .656.387l9.527 17.25A.75.75 0 0 1 21.526 21H2.474a.75.75 0 0 1-.657-1.113l9.526-17.25A.75.75 0 0 1 12 2.25ZM12 8.75a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-1.5 0v-4a.75.75 0 0 1 .75-.75Zm-1 7.75a1 1 0 1 1 2 0 1 1 0 0 1-2 0Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <div
                class="navds-alert__wrapper navds-body-long navds-body-long--medium"
              >
                Endring av kontonummer er midlertidig utilgjengelig.
              </div>
            </div>
          </div>
          <dl
            class="list"
          >
            <div
              class="list-item"
            >
              <dt
                class="list-element-heading"
              >
                <span
                  class="navds-label"
                >
                  Kontonummer
                </span>
              </dt>
              <dd>
                1234 56 78911
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Utbetalinger with utenlandsk bank renders correctly 1`] = `
<DocumentFragment>
  <div
    class="box__wrapper"
    id="utbetaling"
  >
    <div
      class="navds-guide-panel navds-guide-panel--poster"
    >
      <div
        class="navds-guide"
      >
        <img
          alt=""
          class="box__ikon"
          src="Kontonummer.svg"
        />
      </div>
      <div
        class="navds-guide-panel__content"
      >
        <div
          class="box__container"
        >
          <div
            class="box__header"
          >
            <div
              class="box__title-container"
            >
              <div
                class="box__line"
              />
              <h2
                class="box__title navds-heading navds-heading--medium"
              >
                Kontonummer for utbetaling
              </h2>
              <div
                class="box__line"
              />
            </div>
            <a
              class="navds-link anchor-link navds-link--action"
              href="#utbetaling"
            >
              <svg
                aria-hidden="true"
                class="anchor-link__icon"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M14.909 5.152a2.25 2.25 0 0 1 3.182 0l.757.757a2.25 2.25 0 0 1 0 3.182l-4.964 4.965a1.25 1.25 0 0 1-1.768 0L11.03 12.97a.75.75 0 1 0-1.06 1.06l1.085 1.086a2.75 2.75 0 0 0 3.89 0l4.964-4.964a3.75 3.75 0 0 0 0-5.304l-.757-.757-.53.53.53-.53a3.75 3.75 0 0 0-5.304 0l-.878.879a.75.75 0 0 0 1.06 1.06l.879-.878Zm-1.964 3.732a2.75 2.75 0 0 0-3.89 0l-4.964 4.964a3.75 3.75 0 0 0 0 5.304l.513-.514-.513.514.757.757a3.75 3.75 0 0 0 5.304 0l.878-.879a.75.75 0 0 0-1.06-1.06l-.879.878a2.25 2.25 0 0 1-3.182 0l-.757-.757a2.25 2.25 0 0 1 0-3.182l4.964-4.965a1.25 1.25 0 0 1 1.768 0l1.086 1.086a.75.75 0 0 0 1.06-1.06l-1.085-1.086Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              Lenke hit
            </a>
          </div>
          <div
            style="padding-bottom: 1rem;"
          >
            <div
              class="navds-alert navds-alert--warning navds-alert--medium"
              role="status"
            >
              <svg
                aria-labelledby="title-r1"
                class="navds-alert__icon"
                fill="none"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="title-r1"
                >
                  Advarsel
                </title>
                <path
                  clip-rule="evenodd"
                  d="M12 2.25a.75.75 0 0 1 .656.387l9.527 17.25A.75.75 0 0 1 21.526 21H2.474a.75.75 0 0 1-.657-1.113l9.526-17.25A.75.75 0 0 1 12 2.25ZM12 8.75a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-1.5 0v-4a.75.75 0 0 1 .75-.75Zm-1 7.75a1 1 0 1 1 2 0 1 1 0 0 1-2 0Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <div
                class="navds-alert__wrapper navds-body-long navds-body-long--medium"
              >
                Endring av kontonummer er midlertidig utilgjengelig.
              </div>
            </div>
          </div>
          <dl
            class="list"
          >
            <div
              class="list-item"
            >
              <dt
                class="list-element-heading"
              >
                <span
                  class="navds-label"
                >
                  Bank
                </span>
              </dt>
              <dd>
                <p
                  class="navds-body-short navds-body-short--medium"
                >
                  Dominion Bank
                </p>
                <p
                  class="navds-body-short navds-body-short--medium"
                >
                  Forente Arabiske Emirater
                </p>
              </dd>
            </div>
            <div
              class="list-item"
            >
              <dt
                class="list-element-heading"
              >
                <span
                  class="navds-label"
                >
                  Kontonummer / IBAN
                </span>
              </dt>
              <dd>
                AE460090000000123456789
              </dd>
            </div>
            <div
              class="list-item"
            >
              <dt
                class="list-element-heading"
              >
                <span
                  class="navds-label"
                >
                  Valuta
                </span>
              </dt>
              <dd>
                Amerikansk dollar
              </dd>
            </div>
            <div
              class="list-item"
            >
              <dt
                class="list-element-heading"
              >
                <span
                  class="navds-label"
                >
                  BIC / SWIFT-kode
                </span>
              </dt>
              <dd>
                EBILAEADXXX
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
